[metadata]
name = asyncio-nutclient
version = 0.0.1
author = Pawel Rapkiewicz
author_email = pawel.rapkiewicz@gmail.com
description = Library that talks Network UPS Tools Daemon in AsyncIO way
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = asyncio_nutclient
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src